# reqwest-test

./: .dockerignore  Cargo.toml  Dockerfile  README.md  my-service.yaml  reqwest-test.yaml
src/: main.rs
